--- a/docs/posts/12wk-1.out.ipynb
+++ b/docs/posts/12wk-1.out.ipynb
@@ -4,10 +4,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 12wk-1: 순환신경망 (2) – RNN\n",
+        "# 12wk-1: 순환신경망 (2) – RNN: `rNNCell`, `RNNCell`\n",
         "\n",
         "최규빈  \n",
-        "2024-05-15\n",
+        "2024-05-20\n",
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/12wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "bc85c0fd-a161-4d67-9cb8-19a2edd5c479"
+      "id": "74795684-a5dc-4376-8210-1941b11a7e52"
     },
     {
       "cell_type": "code",
@@ -55,7 +55,7 @@
         "\n",
         "`-` 데이터 정리"
       ],
-      "id": "4857c84b-6e0c-4df7-a3e4-9695215a94c4"
+      "id": "e0d6da17-7c99-4066-988f-e0658daf01dc"
     },
     {
       "cell_type": "code",
@@ -114,7 +114,7 @@
       "source": [
         "## B. 풀이 – 실패"
       ],
-      "id": "0cc190e1-929b-4571-b77f-424cb40f40b0"
+      "id": "aea9d5b7-5779-43ed-880f-5a43a179c9c6"
     },
     {
       "cell_type": "code",
@@ -184,7 +184,7 @@
         "\n",
         "`-` 일단 망한건 망한거고 분석을 위해서 숫자좀 체크하자."
       ],
-      "id": "99601ce8-0c8c-4b90-a86a-a076ee0c7cd6"
+      "id": "b4900b80-7bd3-4ee5-a00b-6d39ea0ac54d"
     },
     {
       "cell_type": "code",
@@ -208,7 +208,7 @@
         "\n",
         "`-` 새로운 방식의 데이터 정리"
       ],
-      "id": "539c77b4-a9a5-47fb-b588-94b4145cb93e"
+      "id": "c7dc7783-3423-4d90-b361-c3ac80eed7ad"
     },
     {
       "cell_type": "code",
@@ -231,7 +231,7 @@
       "source": [
         "`-` 사용자 정의 Hnet를 사용"
       ],
-      "id": "a2519ebd-b5a7-4b0b-81f5-8829fda1ff9e"
+      "id": "5d46004c-8966-4052-8c4e-6e1169a92d00"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "f3a3a858-787c-4e2f-b828-53d0622cc8de"
+      "id": "8b375c40-3122-488f-a898-f451c0453f90"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`# 예비학습` – 아래를 관찰하자."
       ],
-      "id": "6246e7e7-a2f6-4f3b-b818-63d576f06907"
+      "id": "5928aa61-6212-4c87-8cfa-eefb025fe32c"
     },
     {
       "cell_type": "code",
@@ -364,7 +364,7 @@
         "\n",
         "`-` 또 다른방식의 구현"
       ],
-      "id": "9812a095-316e-4103-9f8c-925f8a9a1dc4"
+      "id": "3db3897b-827d-4287-9990-17ec4253e93f"
     },
     {
       "cell_type": "code",
@@ -430,7 +430,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "8cc797df-d2bb-4ef4-a090-ecd5c0b635e4"
+      "id": "4bb75275-e757-445d-b2f6-af89f06fca99"
     },
     {
       "cell_type": "code",
@@ -450,7 +450,7 @@
       "source": [
         "`-` 임베딩공간의 해석"
       ],
-      "id": "0db75066-1a0c-46b5-b9bf-c4def3ef32c6"
+      "id": "1b546f09-4ad3-4c20-8ae1-8e039e657419"
     },
     {
       "cell_type": "code",
@@ -699,7 +699,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "bef59ebd-bd67-4d38-8c75-a870f1ee955e"
+      "id": "772570c6-6d4e-4dc5-ad9f-f8ac6d6bd34e"
     },
     {
       "cell_type": "code",
@@ -722,7 +722,7 @@
       "source": [
         "`-` 순환신경망으로 적합"
       ],
-      "id": "ee1a2a14-de27-4002-8717-125a81a0072f"
+      "id": "87edb031-c0d1-4605-a6f4-15bab91b2475"
     },
     {
       "cell_type": "code",
@@ -773,7 +773,7 @@
       "source": [
         "`-` 결과 확인 및 시각화"
       ],
-      "id": "024dc981-8cf2-43ee-872a-5d713407cebe"
+      "id": "1308f4e9-4aa3-449f-9c62-d1b915d09e81"
     },
     {
       "cell_type": "code",
@@ -822,7 +822,7 @@
       "source": [
         "`-` yhat 값 분석"
       ],
-      "id": "dfe2beaf-5a1a-447d-ab40-95e7aa3ab2af"
+      "id": "2c6ce3f1-43cb-46ae-b892-ee5dccf45777"
     },
     {
       "cell_type": "code",
@@ -844,7 +844,7 @@
         "\n",
         "`-` h1,h2 분석 (= 임베딩스페이스 분석)"
       ],
-      "id": "83d1d9e4-30d3-43c2-abae-859b9639e5ad"
+      "id": "50c60fba-e81b-4bdd-bdf1-bb7041a8ddaa"
     },
     {
       "cell_type": "code",
@@ -883,7 +883,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "9486af08-3389-4a98-b3f5-768adb61be2c"
+      "id": "ca398659-8700-4261-87b3-711c60fa1db4"
     },
     {
       "cell_type": "code",
@@ -906,7 +906,7 @@
       "source": [
         "`-` Net설계 및 가중치 설정 (구현1과 동일하도록 가중치 초기화)"
       ],
-      "id": "47d3ca68-db08-440e-a2c0-f20272f981a5"
+      "id": "9233a729-3d03-47e5-83c0-397e86dbb947"
     },
     {
       "cell_type": "code",
@@ -944,7 +944,7 @@
       "source": [
         "`-` 손실함수 및 옵티마이저 설정"
       ],
-      "id": "0d325727-a3e2-4aea-8a17-601ddcaea699"
+      "id": "6e56692f-d998-443f-b904-14148fbf33f5"
     },
     {
       "cell_type": "code",
@@ -965,7 +965,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "b37cccb4-3336-4a30-8b7b-7a7ec2fd386f"
+      "id": "c5c4fab3-e58a-4489-9cb6-82c2e07daa4b"
     },
     {
       "cell_type": "code",
@@ -1000,7 +1000,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "db48bcf6-3724-43f2-b274-d42e3c3617dd"
+      "id": "3e5131e1-58fb-4b14-823f-eaa952040cae"
     },
     {
       "cell_type": "code",
@@ -1030,7 +1030,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "1673cd4b-9ff8-4cce-a4ee-8494c870be00"
+      "id": "47ad4b02-0a49-463d-9086-949e736ca25c"
     },
     {
       "cell_type": "code",
@@ -1053,7 +1053,7 @@
         "\n",
         "`(3)` `torch.nn.RNNCell`을 이용하여 (2)의 결과를 재현하라."
       ],
-      "id": "f048f064-b2b2-4649-a9d4-c5ced09b8874"
+      "id": "103fa2dd-38ae-4383-8a5a-73fbcdc47f6a"
     }
   ],
   "nbformat": 4,
