--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "8b1a764c-40aa-4f7b-9772-69f17f3ff2a1"
+      "id": "96b3615e-d695-4999-8e0f-98d6bf0c4a52"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "57c905a3-c8ca-432b-a028-6c98a3eae3a3"
+      "id": "8fdbdd17-1dc7-44ea-9848-b9ee899af48e"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "98145996-0e48-4c65-9f6b-986ac8da5a59"
+      "id": "9cb9a43e-2b19-486a-859b-14e1339b5c50"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "2d510e52-b8d2-4129-8cae-358b540dee64"
+      "id": "e8f2fb51-77a7-4e41-9735-6409c6a3b56d"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "edf31a91-d23e-463d-99ec-ce0a39a3c735"
+      "id": "73192c87-3947-46d9-9503-96df277a1939"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "b674c583-f6cd-4872-8eab-0a08817276e3"
+      "id": "0d4f45ff-d3ba-4ba9-9696-74b601c7ae83"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "e170c342-ec21-4db9-ae33-d015f9d3d124"
+      "id": "7e23e9a0-ba9d-4eae-941b-316b41803559"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "301fe12b-0e2e-49d5-a412-7557c618848a"
+      "id": "82b4d782-722b-451b-bbf9-1c62f4027d10"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "00c6f69c-f41c-46c5-9263-838638d156da"
+      "id": "db1e2b6d-bc97-40d6-9fea-6117f0e03cc9"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "b1950301-48f6-4361-835c-70bd7725a6d7"
+      "id": "5702c323-94d7-4aa4-95a4-2104bf98c98b"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "d14c46d5-7f8e-462f-85e2-04b72dc0f24f"
+      "id": "41ae163a-b369-4e5f-ae9c-512a64d85d92"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "8214cc63-8a78-4804-8d60-f355262b7f49"
+      "id": "4a5e5434-22b5-4c1b-ba58-778c63d3ab7e"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "ef21af38-4fc2-4c13-9c4d-6fdd3bd7e3ac"
+      "id": "63ed4214-c7b3-4a6c-b386-0ba3ccaf4b8d"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "bdecd393-694b-4e1a-88f0-044c4ad8db1e"
+      "id": "24d6b5dc-f962-4451-86a9-37cc1ca70683"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "24ac3c83-76b0-4c30-afbe-618630768eab"
+      "id": "73ac8fbf-9918-4988-9077-ff4e67cd5d0e"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "a38277e0-94de-47fb-aa2b-ac804e71b246"
+      "id": "a2d2a508-4c61-47bf-85cd-14c94990df4a"
     },
     {
       "cell_type": "code",
