--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "2819d813-dd3a-4460-80e3-9b11de140d30"
+      "id": "ac0bfa64-31d6-4156-b5de-9a0fd6af0b38"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "5985d2fc-817b-492d-beaf-ea6cae54d9f2"
+      "id": "3f4497ce-4b10-4d77-8169-d657d57d1e1c"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "25dd9691-a02c-4b84-931e-fe928aad26ac"
+      "id": "1651b90f-1c81-489b-97ff-75ec9b597b08"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "eaff8f88-b82c-4a4f-8f2b-2b1e612dda82"
+      "id": "bb8651e9-fad7-4724-92e4-79609fbc7816"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "689d5599-2a62-4386-8cad-db37531bbd59"
+      "id": "023266cc-cd38-4ac0-87c4-c742f3c21931"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "0e55630e-5e46-4200-adc6-3bb974833546"
+      "id": "5972049f-15f4-4673-9222-20f98fac4b81"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "fcd2dcee-9c3f-41c0-86db-6fa90305f9b7"
+      "id": "bff0a04e-1505-4b24-9201-6bfd07a6b0a4"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "9f0a5c2e-3c4a-4b84-94e4-acf72ab7d6a8"
+      "id": "acadab7f-892e-4430-8d28-da7ffa1b4a32"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "ea22e60c-b145-42ef-a926-add942758d32"
+      "id": "4c05f5bf-5ecb-43c1-a90a-1956cc574e10"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "646f2dbb-4a68-4ebf-b1b6-fc3a2a54a397"
+      "id": "d264b6d0-4eae-4c62-aeec-91dc9b45dc5e"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "4369c661-6bae-4c59-8d7e-a1530a6f8590"
+      "id": "23909806-361b-4660-8f46-6f25003cc0d0"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "b7f24811-057b-42b6-9697-d66dbc5e00b2"
+      "id": "7c0464de-0562-450f-9921-8d2d9f8bcb18"
     },
     {
       "cell_type": "code",
@@ -491,71 +491,15 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix}\n",
-        "1.2200 & 0.4900 \\\\\n",
-        "1.1700 & 0.4400 \\\\\n",
-        "1.2100 & -0.4500 \\\\\n",
-        "1.2000 & -0.5000 \\\\\n",
-        "-1.2000 & 0.5100 \\\\\n",
-        "-1.2300 & 0.4800 \\\\\n",
-        "-1.2000 & -0.4800 \\\\\n",
-        "-1.1900 & -0.4900 \\\\\n",
-        "0.2000 & 0.0000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
-        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
-        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
-        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
-        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
-        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
-        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
-        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
-        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
-        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
-        "1.2100 \\\\\n",
-        "1.2500 \\\\\n",
-        "1.1000 \\\\\n",
-        "1.1100 \\\\\n",
-        "1.1200 \\\\\n",
-        "1.1300 \\\\\n",
-        "1.1400 \\\\\n",
-        "1.1200 \\\\\n",
-        "3.6000\n",
-        "\\end{bmatrix} +\\begin{bmatrix}\n",
-        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
-        "\\end{bmatrix}\\\\ \\\\\n",
-        "=~& \\begin{bmatrix}\n",
-        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
-        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
-        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
-        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
-        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
-        "\\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
-        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
-        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
-        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
-        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
-        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
-        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
-        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
-        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
-        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -572,7 +516,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "d534d1f4-9e9e-434c-b981-df20ee3e2a85"
+      "id": "527909d0-9c69-458a-9b2e-f2de548c8df6"
     },
     {
       "cell_type": "code",
@@ -692,7 +636,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "6e8d28b7-590b-4e32-8fba-d8d11bff0695"
+      "id": "294748c3-4730-418a-8836-b128fc250b52"
     },
     {
       "cell_type": "code",
@@ -713,7 +657,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "30617d3d-5d54-4559-af6d-12f7966920ba"
+      "id": "40b21889-f675-4136-96de-66fabc440197"
     },
     {
       "cell_type": "code",
@@ -748,7 +692,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "a7e781ae-5794-46b7-a058-85aced04879e"
+      "id": "09146cba-3dd1-47b8-a686-96380e8be3b8"
     },
     {
       "cell_type": "code",
@@ -800,7 +744,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "f3fda5f1-495e-4b4a-bfa5-a6acc3f5464a"
+      "id": "ed87fb2b-ec23-4137-9bdf-fca70652a0dc"
     },
     {
       "cell_type": "code",
@@ -825,7 +769,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "3b88a903-2894-46b4-9551-bf74fa66be84"
+      "id": "4d55caec-ae4f-473a-aeae-c8476ae76dde"
     },
     {
       "cell_type": "code",
@@ -867,7 +811,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "3894d2bb-6fc3-4cdf-94e4-1b715ea801d2"
+      "id": "4970dff4-0f3a-4805-b6a4-63781ab73026"
     },
     {
       "cell_type": "code",
@@ -890,7 +834,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "fcf40055-5f1d-4e79-b687-d2107359a93a"
+      "id": "fd809a51-70a0-46c1-9873-747ea8a00f66"
     },
     {
       "cell_type": "code",
@@ -922,7 +866,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "20663a5f-6fd1-4df1-ac1d-f27c74630151"
+      "id": "47c714e9-fb5f-45e3-96ce-06985b0602ea"
     },
     {
       "cell_type": "code",
@@ -942,7 +886,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "55915c3d-1e4c-4f18-8fe5-dbf2e91e5d59"
+      "id": "de806612-7293-4945-9edb-08ec5d79cbce"
     },
     {
       "cell_type": "code",
@@ -976,7 +920,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "1e431a1c-17b2-4d4d-ba15-326dfdbfe22e"
+      "id": "0dede11b-1499-4ded-aa77-4649dd1aebef"
     },
     {
       "cell_type": "code",
@@ -997,7 +941,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "1c10a998-0805-4ebc-8616-9b34b125b3a0"
+      "id": "30cda41a-a203-4ab1-a6b4-758926bf0a44"
     },
     {
       "cell_type": "code",
@@ -1029,7 +973,7 @@
       "source": [
         "(update)"
       ],
-      "id": "9c237e7b-3fe8-41d0-8e4e-0e194e627eeb"
+      "id": "368dc7c9-2d61-4ad8-b3bc-75408dfd97bf"
     },
     {
       "cell_type": "code",
@@ -1049,7 +993,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "72d5bb19-9fdc-4202-abe4-217aeb29a07e"
+      "id": "53f9fde8-3155-4fd0-ac17-ff600f912513"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1025,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "2e67aaea-69ea-4473-ba7c-fb391264a3d1"
+      "id": "f2db5532-1ab8-4ee4-ab98-4722cffed838"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1045,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "3d124ca7-ebbf-4942-a896-84d4553cfdb4"
+      "id": "26203c5d-c429-4011-9aa5-6d50b6c26788"
     },
     {
       "cell_type": "code",
@@ -1133,7 +1077,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "a0392cdb-4cec-461d-a5fa-aa0af2f526c9"
+      "id": "64766236-f812-479d-9400-016223d5e034"
     },
     {
       "cell_type": "code",
@@ -1199,7 +1143,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "03a3541a-487b-450f-b87f-3d3073fe1436"
+      "id": "d564bd0d-6fc2-478c-9385-e159905faef9"
     },
     {
       "cell_type": "code",
@@ -1236,7 +1180,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "31abc1ec-c9db-4454-9b02-09a49e41840b"
+      "id": "5efaebd2-5978-489f-b02d-335816b05b82"
     },
     {
       "cell_type": "code",
@@ -1290,7 +1234,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "91d1b8a5-4d65-4121-99aa-e19cec852b5d"
+      "id": "17a94e53-bfb8-45e3-9049-913f093a4260"
     },
     {
       "cell_type": "code",
@@ -1310,7 +1254,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "d7ea22d5-ba50-449d-8e4b-f855cb0e685e"
+      "id": "f047b3fd-dee1-43d1-a9f9-97190fc9c2bf"
     },
     {
       "cell_type": "code",
@@ -1350,7 +1294,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "b7b2aeb8-6865-42d9-9f8e-cc49be0129b5"
+      "id": "4a620bf5-d329-4c62-9144-8f734ada02a5"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1318,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "6a52e7ea-91f8-46d3-8531-79b3cc82e5af"
+      "id": "04ef030a-89fe-41f5-9a58-7120f32b01c0"
     },
     {
       "cell_type": "code",
@@ -1428,7 +1372,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "5e72c98c-b976-4df1-8426-d3f12490fc1c"
+      "id": "80a8bead-71fe-4bca-b8d1-410f31515200"
     },
     {
       "cell_type": "code",
@@ -1449,7 +1393,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "35e0988f-70c2-4c5e-8b54-64d4d8072272"
+      "id": "753b82b0-b203-499f-893c-b4332b2b214e"
     },
     {
       "cell_type": "code",
