--- a/docs/posts/12wk-1.out.ipynb
+++ b/docs/posts/12wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 12wk-1: 순환신경망 (2) – RNN: `rNNCell`, `RNNCell`\n",
+        "# 12wk-1: 순환신경망 (2) – `rNNCell`, `RNNCell`\n",
         "\n",
         "최규빈  \n",
         "2024-05-20\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "dc27e795-e003-4e79-a12d-01f55a03dd59"
+      "id": "eec084b3-7981-4899-b934-05c0fd7d45d5"
     },
     {
       "cell_type": "code",
@@ -55,7 +55,7 @@
         "\n",
         "`-` 데이터 정리"
       ],
-      "id": "306349c2-e24d-42fd-8359-c343c08f4724"
+      "id": "5e8034c8-d496-4bf8-b4b6-79a00b158dbd"
     },
     {
       "cell_type": "code",
@@ -114,7 +114,7 @@
       "source": [
         "## B. 풀이 – 실패"
       ],
-      "id": "fd152683-9a2c-4aa5-b26f-d88d459847ef"
+      "id": "5959e103-7f78-4a9e-805b-c2a8c5bf854c"
     },
     {
       "cell_type": "code",
@@ -184,7 +184,7 @@
         "\n",
         "`-` 일단 망한건 망한거고 분석을 위해서 숫자좀 체크하자."
       ],
-      "id": "7d866a36-c043-40f7-976b-20d636df3b24"
+      "id": "fe077434-35d6-475c-9c10-961e4ba59378"
     },
     {
       "cell_type": "code",
@@ -208,7 +208,7 @@
         "\n",
         "`-` 새로운 방식의 데이터 정리"
       ],
-      "id": "a342542e-2f5f-44c2-b982-12cbc41420b4"
+      "id": "9792f8c0-6f4e-44c4-b418-ae49070955a2"
     },
     {
       "cell_type": "code",
@@ -231,7 +231,7 @@
       "source": [
         "`-` 사용자 정의 Hnet를 사용"
       ],
-      "id": "b437099f-1b15-414a-97eb-a711e3dfaf96"
+      "id": "aee9215a-d993-4e2d-b18d-0e07a29b986e"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "7658b439-e342-4752-8c59-35221937766f"
+      "id": "bea2b70f-604d-4d02-bc84-d0092d0334cc"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`# 예비학습` – 아래를 관찰하자."
       ],
-      "id": "9ebc6ad6-988a-429c-aa03-7daf02e8d975"
+      "id": "207872aa-ee40-471d-a384-4950e863ab8a"
     },
     {
       "cell_type": "code",
@@ -364,7 +364,7 @@
         "\n",
         "`-` 또 다른방식의 구현"
       ],
-      "id": "cad75067-769f-445b-a16b-e4eba55ff773"
+      "id": "027cc5dc-ecb2-4a99-a4a6-361524551a75"
     },
     {
       "cell_type": "code",
@@ -430,7 +430,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "004e5f3a-4603-46e5-9f71-e04f56e15514"
+      "id": "47935971-3859-4729-92a2-dcabd035ee10"
     },
     {
       "cell_type": "code",
@@ -450,7 +450,7 @@
       "source": [
         "`-` 임베딩공간의 해석"
       ],
-      "id": "72e3875e-3432-4c7c-a7f5-835d60ba9078"
+      "id": "b5a55868-b09a-4deb-8b85-c7e604992cb5"
     },
     {
       "cell_type": "code",
@@ -699,7 +699,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "9e39223f-1cc9-488d-a5e3-ae8d03683406"
+      "id": "7ce8f349-dd4f-42bf-8edf-f4e83b7150ee"
     },
     {
       "cell_type": "code",
@@ -722,7 +722,7 @@
       "source": [
         "`-` 순환신경망으로 적합"
       ],
-      "id": "7b1cdb1f-e9e1-4a01-a29e-46ff0f6228a0"
+      "id": "cb0bfb7e-e097-427a-8f43-885a4c939e1e"
     },
     {
       "cell_type": "code",
@@ -773,7 +773,7 @@
       "source": [
         "`-` 결과 확인 및 시각화"
       ],
-      "id": "8eaa39ef-b099-478d-b9dd-3cc58e87be97"
+      "id": "6ee6f5b1-f2d6-4d63-8a06-e80b0212f884"
     },
     {
       "cell_type": "code",
@@ -822,7 +822,7 @@
       "source": [
         "`-` yhat 값 분석"
       ],
-      "id": "ea875dda-78b1-41b1-a64d-55fca16fec76"
+      "id": "d01daa86-73f0-4a43-a6e0-8e44c1a2a1ff"
     },
     {
       "cell_type": "code",
@@ -844,7 +844,7 @@
         "\n",
         "`-` h1,h2 분석 (= 임베딩스페이스 분석)"
       ],
-      "id": "752db655-0c7a-4bce-a4f8-6e7d90335945"
+      "id": "d8afe870-63c9-4ca4-b245-4ca77b595689"
     },
     {
       "cell_type": "code",
@@ -883,7 +883,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "fd9a5011-77dc-4221-b943-399d19f28d25"
+      "id": "853d0337-33d5-48c8-a393-8f68ecf88918"
     },
     {
       "cell_type": "code",
@@ -906,7 +906,7 @@
       "source": [
         "`-` Net설계 및 가중치 설정 (구현1과 동일하도록 가중치 초기화)"
       ],
-      "id": "1744046d-1484-419d-a7a0-ddf8fe110945"
+      "id": "573d93d4-8393-473c-924e-a220a39c8911"
     },
     {
       "cell_type": "code",
@@ -944,7 +944,7 @@
       "source": [
         "`-` 손실함수 및 옵티마이저 설정"
       ],
-      "id": "da4f90a5-88fe-499f-8ed0-3353636d3368"
+      "id": "18f80ffe-f987-4249-a1c2-3f223781f73d"
     },
     {
       "cell_type": "code",
@@ -965,7 +965,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "f72bbcd3-889b-482d-a9ce-84107ad823ad"
+      "id": "e2adf4fa-d3e5-4bd7-8f07-f60b121a8057"
     },
     {
       "cell_type": "code",
@@ -1000,7 +1000,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "90075c9f-4006-4ef2-bfa6-1ebcfd70cfdb"
+      "id": "c937fb9e-b33b-43a4-b30f-f39651fb4aef"
     },
     {
       "cell_type": "code",
@@ -1030,7 +1030,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "3307cca8-54ea-415b-9eb5-2113abeb1077"
+      "id": "c4371c8b-07a6-421d-984d-0e3d44721822"
     },
     {
       "cell_type": "code",
@@ -1053,7 +1053,7 @@
         "\n",
         "`(2)` `torch.nn.RNNCell`을 이용하여 (1)의 결과를 재현하라."
       ],
-      "id": "361e4039-2588-4b98-9626-dcfa56d70b25"
+      "id": "ebb0f0b4-52d1-40a9-83d7-f3396efee092"
     }
   ],
   "nbformat": 4,
@@ -1074,7 +1074,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.10.13"
     }
   }
 }
